--- a/login.html
+++ b/login.html
@@ -15,8 +15,20 @@
   <link rel="stylesheet" href="plugins/iCheck/square/blue.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+
+  <script type="text/javascript">
+    function resetValues()
+    {
+     var x=document.getElementsByTagName("input");
+     for(i = 0; i<=x.length-1; i++)//x.length-1 i don't want to reset the value of the last button
+      {
+      if(x.item(i).type!="button")
+      x.item(i).value = "";
+      }
+    }
+    </script>
 </head>
-<body class="hold-transition" ></body>
+<body class="hold-transition" onload="resetValues()" ></body>
     
 
     <div class="login-box">
