actualización en consulta y enfermería

--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
           
             <form action="conn/logeo.php" method="post">
               <div class="form-group has-feedback">
-                <input type="text" id="usuario" name="usuario" class="form-control" placeholder="usuario">
+                <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Cédula">
               
               </div>
               <div class="form-group has-feedback">
